<?xml version="1.0" encoding="utf-8"?>
<!-- 侧滑菜单的menu部分 -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

  <View
      android:layout_width="match_parent"
      android:layout_height="@dimen/navigationLineHeight"
      android:background="?android:listDivider"/>

  <cn.microanswer.phonemp3.ui.views.Cell
      android:id="@+id/menuCellRecentPlay"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="6dp"
      android:tag="@string/mtheme_color"
      android:paddingRight="6dp"
      app:icon="@drawable/icon_recent_play"
      android:background="@drawable/my_list_item_style"
      app:underLine="0dp"
      app:titLe="@string/recent_play"/>

  <cn.microanswer.phonemp3.ui.views.Cell
      android:id="@+id/menuCellMyLove"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:tag="@string/mtheme_color"
      android:paddingLeft="6dp"
      android:background="@drawable/my_list_item_style"
      android:paddingRight="6dp"
      app:icon="@drawable/icon_love"
      app:underLine="0dp"
      app:titLe="@string/mylove"/>

  <cn.microanswer.phonemp3.ui.views.Cell
      android:id="@+id/menuCellMyPlayList"
      android:layout_width="match_parent"
      android:tag="@string/mtheme_color"
      android:layout_height="wrap_content"
      android:paddingLeft="6dp"
      android:background="@drawable/my_list_item_style"
      android:paddingRight="6dp"
      app:icon="@drawable/icon_music_list"
      app:underLine="0dp"
      app:titLe="@string/myplaylist"/>

  <cn.microanswer.phonemp3.ui.views.Cell
      android:id="@+id/menuCellAllMusic"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:tag="@string/mtheme_color"
      android:paddingLeft="6dp"
      android:background="@drawable/my_list_item_style"
      android:paddingRight="6dp"
      app:icon="@drawable/icon_all_music"
      app:underLine="0dp"
      app:titLe="@string/allmusic"/>

  <View
      android:layout_width="match_parent"
      android:layout_height="@dimen/navigationLineHeight"
      android:background="?android:listDivider"/>

  <cn.microanswer.phonemp3.ui.views.Cell
      android:id="@+id/menuCellTimeOut"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:tag="@string/mtheme_color"
      android:paddingLeft="6dp"
      android:background="@drawable/my_list_item_style"
      android:paddingRight="6dp"
      app:underLine="0dp"
      app:icon="@drawable/icon_time_exit"
      app:titLe="@string/timeout"/>

  <cn.microanswer.phonemp3.ui.views.Cell
      android:id="@+id/menuCellNightMode"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:tag="@string/mtheme_color"
      android:background="@drawable/my_list_item_style"
      android:paddingLeft="6dp"
      android:paddingRight="6dp"
      app:underLine="0dp"
      app:icon="@drawable/icon_night"
      app:titLe="@string/nightMode"/>

  <cn.microanswer.phonemp3.ui.views.Cell
      android:id="@+id/menuCellMoreFunction"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="6dp"
      android:background="@drawable/my_list_item_style"
      android:paddingRight="6dp"
      android:tag="@string/mtheme_color"
      app:icon="@drawable/icon_more_function"
      app:titLe="@string/morefunc"
      app:underLine="0dp"/>

  <View
      android:layout_width="match_parent"
      android:layout_height="@dimen/navigationLineHeight"
      android:background="?android:listDivider"/>

  <cn.microanswer.phonemp3.ui.views.Cell
      android:id="@+id/menuCellSetting"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/my_list_item_style"
      android:paddingLeft="6dp"
      android:paddingRight="6dp"
      android:tag="@string/mtheme_color"
      app:underLine="0dp"
      app:icon="@drawable/icon_setting"
      app:titLe="@string/options"/>

  <cn.microanswer.phonemp3.ui.views.Cell
      android:id="@+id/menuCellAbout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/my_list_item_style"
      android:paddingLeft="6dp"
      android:paddingRight="6dp"
      android:tag="@string/mtheme_color"
      app:underLine="0dp"
      app:icon="@drawable/icon_info"
      app:titLe="@string/about"/>
</LinearLayout>