<?xml version="1.0" encoding="utf-8"?>
<cn.microanswer.phonemp3.ui.views.FitSystemLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:tag="@string/mtheme_background"
    app:boottomColor="?attr/colorPrimary"
    app:leftColor="?attr/colorPrimary"
    app:rightColor="?attr/colorPrimary"
    app:topColor="?attr/colorPrimary">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:tag="@string/mtheme_background"
        android:theme="?windowActionBar"
        app:title="@string/about" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textColor="?android:textColorPrimary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="70dp"
        android:text="版本2.2.0"
        android:textColor="?android:textColorSecondary"
        android:textSize="15sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/view_about" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/linecolor" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:gravity="center_horizontal"
        android:paddingTop="5dp"
        android:tag="@string/mtheme_color"
        android:paddingBottom="5dp"
        android:text="@string/web"
        android:textSize="12sp" />


</cn.microanswer.phonemp3.ui.views.FitSystemLinearLayout>