<?xml version="1.0" encoding="utf-8"?>
<cn.microanswer.phonemp3.ui.views.FitSystemLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:tag="@string/mtheme_background"
    app:boottomColor="?attr/colorPrimary"
    app:leftColor="?attr/colorPrimary"
    app:rightColor="?attr/colorPrimary"
    app:topColor="?attr/colorPrimary">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:tag="@string/mtheme_background"
        android:theme="?windowActionBar"
        app:title="@string/scannmusic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="1">

        <ProgressBar
            android:layout_width="wrap_content"
            android:id="@+id/progressbar"
            android:visibility="gone"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:id="@+id/textviewscannHint"
            android:layout_marginRight="20dp"
            android:text="立即扫描手机中所有的歌曲。"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="wrap_content"
            android:text="@string/scannnow"
            android:id="@+id/buttonScann"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:text=""
            android:id="@+id/textViewResult"
            android:visibility="gone"
            android:layout_height="wrap_content" />

    </LinearLayout>

</cn.microanswer.phonemp3.ui.views.FitSystemLinearLayout>