<?xml version="1.0" encoding="utf-8"?>
<cn.microanswer.phonemp3.ui.views.Group xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:tag="@string/mtheme_color"
    app:title="@string/about"
    app:titleBackground="@color/linecolor"
    app:titleColor="@color/colorPrimary">

    <cn.microanswer.phonemp3.ui.views.Cell
        android:id="@+id/cellCheckUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/my_list_item_style"
        android:paddingLeft="@dimen/setItemPaddingLR"
        android:paddingTop="@dimen/setItemPaddingTB"
        android:paddingRight="@dimen/setItemPaddingLR"
        android:paddingBottom="@dimen/setItemPaddingTB"
        android:tag="@string/mtheme_color"
        app:icon="@drawable/icon_check"
        app:titLe="@string/checkUpdate"
        app:underLine="1px">

        <TextView
            android:id="@+id/textViewVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </cn.microanswer.phonemp3.ui.views.Cell>


    <cn.microanswer.phonemp3.ui.views.Cell
        android:id="@+id/cellFeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/my_list_item_style"
        android:paddingLeft="@dimen/setItemPaddingLR"
        android:paddingTop="@dimen/setItemPaddingTB"
        android:paddingRight="@dimen/setItemPaddingLR"
        android:paddingBottom="@dimen/setItemPaddingTB"
        android:tag="@string/mtheme_color"
        app:icon="@drawable/icon_feedback"
        app:titLe="反馈建议"
        app:underLine="0px">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/icon_right"
            android:tag="@string/mtheme_color" />
    </cn.microanswer.phonemp3.ui.views.Cell>

</cn.microanswer.phonemp3.ui.views.Group>